hphp/hack/test/typecheck/override_abstract_concrete.php
<?hh

class C {
  public function f(): void {}
}

abstract class D extends C {
  abstract public function f(): void;
}
